# RenderStuff

./: .gitignore  CMakeLists.txt  main.cpp  make.sh  notes.txt
TestLib/: test.cpp
scripts/: clean.sh  compile.sh  make.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/MiniRenderEngine/: CMakeLists.txt  main.cpp
src/MiniRenderEngine/ErrorHandling/: CMakeLists.txt  error_handling.cpp  error_handling.h
